# cpp_trt_inference

./: .gitignore  CMakeLists.txt  detection_label_names.csv  labels_for_remap.csv  logger.h  main.cpp  trt_buffers.h  trt_buffers.hpp  trt_classification_inferencer.cpp  trt_classification_inferencer.h  trt_cnn_inferencer.cpp  trt_cnn_inferencer.h  trt_common.hpp  trt_detection_inferencer.cpp  trt_detection_inferencer.h  trt_segmentation.cpp  trt_segmentation.h  trt_segmentation_inferencer.cpp  trt_segmentation_inferencer.h
application/detection/: CMakeLists.txt  main.cpp
application/segmentation/: CMakeLists.txt  config.json  main.cpp
test_data/: classes.csv  config.json  convert_one_model.sh
tests/: CMakeLists.txt
tests/dataHandlingTests/: CMakeLists.txt  testDataHandling.cpp
tests/segmentationWrapperTests/: CMakeLists.txt  testSegmentationWrapper.cpp
trtwrapper/: CMakeLists.txt
trtwrapper/include/: data_handler.h  detection_wrapper.h  inference_handlers.h  interfaces.h  logging.h  segmentation_wrapper.h  trt_buffers.h  trt_classification_inferencer.h  trt_cnn_inferencer.h  trt_common.h  trt_detection_inferencer.h  trt_effdet_inferencer.h  trt_segmentation_inferencer.h  util.h
trtwrapper/include/detection_inference/: trt_detection_inferencer.h  trt_effdet_inferencer.h  trt_yolo_inferencer.h
trtwrapper/src/: data_handler.cpp  detection_wrapper.cpp  logger.cpp  segmentation_wrapper.cpp  trt_classification_inferencer.cpp  trt_cnn_inferencer.cpp  trt_detection_inferencer.cpp  trt_effdet_inferencer.cpp  trt_segmentation_inferencer.cpp  trt_yolo_inferencer.cpp
trtwrapper/src/detection_inference/: trt_detection_inferencer.cpp  trt_effdet_inferencer.cpp  trt_yolo_inferencer.cpp
