project(TRT_WRAPPER_DETECTION_EXAMPLE)

find_package(OpenCV REQUIRED)
find_package(CUDA REQUIRED)

add_executable(TRT_WRAPPER_DETECTION main.cpp)

target_link_libraries(TRT_WRAPPER_DETECTION TRT_WRAPPER ${OpenCV_LIBS} ${CUDA_LIBRARIES})
target_include_directories(TRT_WRAPPER_DETECTION PRIVATE ${OpenCV_INCLUDE_DIRS} ${CUDA_INCLUDE_DIRS})
#target_include_directories(TRT_WRAPPER_SEGMENTATION_EXAMPLE PUBLIC ${TRT_WRAPPER_SEGMENTATION_SOURCE_DIR})